<resources>
    <string name="app_name">Finder</string>
    <string name="email_de">E-Mail</string>
    <string name="password_de">Passwort</string>
    <string name="login_de">Login</string>
    <string name="continue_de">weiter</string>
    <string name="keeplogin_de">Login speichern?</string>
    <string name="register1_de">Registrieren (1/2)</string>
    <string name="meetings_de">Deine Matches:</string>
    <string name="register2_de">Registrieren (2/2)</string>
    <string name="registerF_de">Abschließen</string>
    <string name="interest_de">#Interesse</string>
</resources>